<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionUpdateActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.mLender.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name" />
    </android.support.design.widget.AppBarLayout>
    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:contentPadding="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:clipToPadding="false"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/paidAmountTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/paidAmountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paid_amount"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/paidInterestTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/paidInterestEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Interest Paid"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/updateArrearsTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/updateArrearsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Arrears"
                android:inputType="number"
                android:enabled="false"
                android:visibility="gone"/>
        </android.support.design.widget.TextInputLayout>



            <TextView
                android:id="@+id/currentArrearsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrears"
                android:textSize="18sp"
                android:visibility="gone"
                android:enabled="false"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorRed"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/updatedTransactionStatusTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            app:errorEnabled="true"
            android:layout_marginLeft="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <TextView
                android:id="@+id/updatedTransactionStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="18sp"/>

        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/updatedTransactionStatusRadioGroup"
                android:checkedButton="@+id/notCompletedRadioButton" >

                <RadioButton
                    android:id="@+id/notCompletedRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_completed"
                    android:paddingRight="8dp"/>
                <RadioButton
                    android:id="@+id/completedRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completed"/>
            </RadioGroup>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.button.MaterialButton
                android:id="@+id/updateTransactionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="updateTransaction"
                android:text="@string/update_transaction_button"
                android:textColor="@color/textColorBlack" />


        </RelativeLayout>
    </LinearLayout>
    </android.support.design.card.MaterialCardView>
</RelativeLayout>